# xuexi

./: Cargo.toml  LICENSE  README.md  jp-lao-en.csv  lao-eng-dictionary.csv
.github/workflows/: ci.yaml
examples/: example.rs
fugu/: Cargo.toml
fugu/src/: app.rs  main.rs  state.rs  theme.rs
fugu/src/assets/: style.css
fugu/src/components/: button.rs  dropdown.rs  list.rs  mod.rs  textarea.rs
fugu/src/containers/: editor.rs  generator.rs  layout.rs  mod.rs  navbar.rs
lunette/: Cargo.toml
lunette/src/: main.rs
lunette/src/ui/: mod.rs  view.rs
phasa/: Cargo.toml
phasa/src/: cedict.rs  character.rs  lib.rs
phasa/src/chinese/: mod.rs
src/: cedict.rs  character.rs  clean.rs  common.rs  definition.rs  dictionary.rs  error.rs  export.rs  lib.rs  ordering.rs  punctuation.rs  puncutation.json  util.rs  word.rs
src/chinese/: def.rs  mod.rs
src/dictionary/: mod.rs
src/laotian/: mod.rs  wrapper.rs
src/word/: mod.rs
