[package]
name = "xuexi"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.6"
chamkho = "1.1.0"

[features]
chinese = []
laotian = []

[[example]]
name = "example"
required-features = ["chinese", "laotian"]
