[package]
name = "xuexi"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
chamkho = { git = "https://github.com/veer66/chamkho.git", tag = "1.4.1" }
dodo-zh = "0.1.5"

[features]
chinese = []
laotian = []

[[example]]
name = "example"
required-features = ["chinese", "laotian"]
