[package]
name = "xuexi"
version = "0.1.5"
edition = "2021"
keywords = ["chinese", "cedict", "lao", "laotian"]
exclude = [".vscode", ".github", ".editorconfig"]
description = "utility to parse a sentence into words for multiple language"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
dodo-zh = "0.1.5"
chamkho = "=1.4.0"

[features]
all = ["chinese", "laotian"]
chinese = []
laotian = []

[[example]]
name = "example"
required-features = ["chinese", "laotian"]
