[package]
name = "fugu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop", "fermi"] }
tokio = { version = "1.18.2", features = ["full"] }
phasa = { path = "../phasa", features = ["chinese"] }